--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Your Title Goes Here</title>
+    <title>Chloé About Me!</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <!-- Design Your Site Here! -->
+    <h1>Hi there! My name is Chloé.</h1>
+    <h3>I am nineteen years old
   </body>
 </html>
+
