--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Hi there! My name is Chloé.</h1>
-    <h3>I am nineteen years old
+    <h1><u>
+Hi! My name is Chloé! </u>
+</h1>
+<h3>
+<a href="music.html">Music</a> | <a href="hobbies.html">Hobbies</a>
+</h3>
+<h2><u>
+About me!</u>
+</h2>
+<h3>
+I am nineteen years old. I was born in the tiny town of South Haven, MI but at the ripe age of eight I put on my cowboy boots and moved to Austin, TX. <br> I am the oldest of four siblings. Avery (2), Jasper (6), & Shiloh (17). <br> <img src="https://scontent-ort2-2.xx.fbcdn.net/v/t1.0-9/34598152_10215379470896903_3738627481930825728_n.jpg?_nc_cat=0&oh=c3f07f3bb55ab3eb47c739cefc697ad5&oe=5BD40B8F" width="400"><br>
+From left to right: Me, Jasper, and Shiloh in Chicago this summer. <br> <br> <img src="https://scontent-ort2-2.xx.fbcdn.net/v/t1.0-9/32078657_10204953341269081_2353583189911404544_n.jpg?_nc_cat=0&oh=7be31439b5e6bb54e45a0afc3937a261&oe=5BDB1FC2" height="400"> <br> 
+Avery and I! 
+</h3>
+
   </body>
 </html>
 
