--- a/music.html
+++ b/music.html
@@ -1,3 +1,12 @@
+<!doctype html>
+
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Chloé About Me!</title>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
 <h1><u>
 Hi! My name is Chloé! </u>
 </h1>
