automatically backed up by learn

--- a/music.html
+++ b/music.html
@@ -22,3 +22,4 @@ These are some of my favorite songs and artists right now!<br> Feel free to clic
  <a href="https://open.spotify.com/track/6i3pI6stygvHzOGLEIHJyL"><img src="https://f4.bcbits.com/img/a0153713957_10.jpg" width="400"></a> <br> Sea Dogs & Pyrite by Soft Cough <br> <br>
  <a href="https://open.spotify.com/track/3EuSjRC1jKGe6h3Nc9haWn"><img src="https://i1.sndcdn.com/artworks-ACp4LFLetHeD-0-t500x500.jpg" width="400"></a> <br> Stevie Knicks by Girlyboi
 </h3>
+</body>
